# 2D-Smoke-Simulator-using-OpenGL-on-the-CPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Src/: glad.c  smoke.c
Src/Shader/: fluid.fs  fluid.vs
include/: shader.h
